fix scrollbar thumb color

--- a/packages/ui-kit/src/styles/_semantic-color-tokens.scss
+++ b/packages/ui-kit/src/styles/_semantic-color-tokens.scss
@@ -33,6 +33,7 @@
   --color-bg-body: var(--color-light-mode-500);
   --color-bg-disabled: var(--color-neutral-dark-50);
   --color-bg-secondary-hover: var(--color-neutral-dark-200);
+  --color-bg-action: var(--color-neutral-dark-100);
 
   /* interactive */
   --color-action-disabled: var(--color-neutral-dark-200);
@@ -86,6 +87,7 @@
   --color-bg-secondary-hover: var(--color-dark-mode-400);
   --color-bg-info: var(--color-info-800);
   --color-bg-body: var(--color-dark-mode-600);
+  --color-bg-action: var(--color-dark-mode-300);
 
   /* interactive */
   --color-action-disabled: var(--color-neutral-dark-400);
